--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -5,8 +5,6 @@
 
 # Shadow
 shadow = true;
-no-dnd-shadow = false;
-no-dock-shadow = false;
 shadow-radius = 7.5;
 shadow-offset-x = -11;
 shadow-offset-y = -4.5;
@@ -29,29 +27,28 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 1.0;
 inactive-opacity = 1.0;
 active-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
-blur-background = true;
-blur-background-frame = true;
-blur-method = "kawase";
-blur-strength = 5;
-blur-background-fixed = false;    
-blur-background-exclude = [
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"class_g = 'slop'",
-	"_GTK_FRAME_EXTENTS@:c"
-];
+
+#blur-background = true;
+#blur-background-frame = true;
+#blur-method = "kawase";
+#blur-strength = 5;
+#blur-background-fixed = false;    
+#blur-background-exclude = [
+	#"window_type = 'dock'",
+	#"window_type = 'desktop'",
+	#"class_g = 'slop'",
+	#"_GTK_FRAME_EXTENTS@:c"
+#];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
 
 # Fading
-fading = true;
+fading = false;
 fade-delta = 4;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
